src/app/responsive.scss
@media screen and (max-width: 1200px) {
  h1 {
    font-size: 5em;
  }

  h2 {
    font-size: 36px;
  }

  h3 {
    font-size: 28px;
    line-height: 38px;
  }

  p, li {
    font-size: 22px;
    line-height: 28px;
  }

  .spacerOne {
    height: calc(100vh - 256px);
  }

  .card {
    border-radius: 12px;
    padding: 26px 32px 32px 32px;
  }

  .buttonContainer {
    flex-direction: column;

    a {
      &:nth-child(1) {
        margin-bottom: 12px;
      }

      &:nth-child(2) {
        margin-top: 12px;
      }
    }

    .button {
      width: 100%;
    }
  }
}

@media screen and (max-width: 820px) {
  h3 {
    font-size: 24px;
    line-height: 34px;
  }

  p, li {
    font-size: 18px;
    line-height: 24px;
  }

  .squaresGrid {
    display: grid;
    grid-gap: 24px;
    grid-template-columns: repeat(4, calc(80% - 40px));
    grid-template-rows: minmax(150px, 1fr);
    overflow: scroll;
  }

  #projectsSection .squaresGrid {
    margin-left: -48px;
    padding: 0 48px 24px 48px;
    width: 100vw;
  }
}

@media screen and (max-width: 680px) {
  h1 {
    font-size: 4em;
  }

  h2 {
    font-size: 26px;
  }

  h3 {
    font-size: 22px;
    line-height: 32px;
  }

  p, li {
    font-size: 16px;
    line-height: 21px;
  }

  .marginBottom_xsm {
    margin-bottom: 8px;
  }

  .marginBottom_sm {
    margin-bottom: 12px;
  }

  .marginBottom_med {
    margin-bottom: 24px;
  }

  .marginBottom_lrg {
    margin-bottom: 64px;
  }

  .marginTop_xsm {
    margin-top: 8px;
  }

  .marginTop_sm {
    margin-top: 12px;
  }

  .marginTop_med {
    margin-top: 24px;
  }

  .marginTop_lrg {
    margin-top: 64px;
  }

  .spacerOne {
    height: calc(100vh - 230px);
  }

  #projectsSection {
    width: calc(100vw - 48px);
  }

  #projectsSection .squaresGrid {
    margin: -24px 0 -48px -48px;
    padding: 24px 48px;
    width: calc(100vw + 48px);
  }

  .card {
    box-shadow: 6px 6px 24px rgba(0, 0, 0, 0.6);
    padding: 18px 24px 24px 24px;
  }

  .arrow {
    bottom: 12px;
    width: 24px;
  }

  .rightText {
    margin: 4px 0 0 4px;
  }

  #projects,
  #experience,
  #skills,
  #about {
    height: auto;
  }

  #skillSection,
  #aboutSection {
    width: calc(100% - 48px);
  }
}

@media screen and (max-width: 520px) {
  h1 {
    font-size: 3em;
  }
}

